GpResTable: fix timings styles, logi on mobile

--- a/src/assets/less/components/gp-results-table-output.less
+++ b/src/assets/less/components/gp-results-table-output.less
@@ -232,7 +232,12 @@
 					}
 
 					&:nth-child(2n) {
-						border-top: 1px solid #e7e7ee;
+						border-left: 1px solid #e7e7ee;
+
+						@media (min-width: @screen-md-min) {
+							border-top: 1px solid #e7e7ee;
+							border-left: none;
+						}
 					}
 
 					&_cell {
@@ -354,6 +359,10 @@
 								&_units {
 									@media (min-width: @screen-md-min) {
 										display: none;
+									}
+
+									&.last-subcell {
+										display: inline;
 									}
 								}
 
